--- a/source/sass/directions.scss
+++ b/source/sass/directions.scss
@@ -1,14 +1,19 @@
 .directions {
+  position: relative;
+  z-index: 6;
   background-color: $basic-blue-light;
-  padding: 71px 25px 29px 25px;
+  padding: 79px 25px 35px 25px;
+  margin-top: -30px;
   color: $basic-blue;
-  border-radius: 25px;
+  border-radius: 31px;
 
   @media (min-width: $tablet-width) {
-    padding: 71px 76px 80px 76px;
+    padding: 95px 76px 80px 76px;
     background-image: url("../img/flags-back.png");
     background-repeat: no-repeat;
     background-position: top 100px right 40px;
+    border-radius: 0 0 61px 61px;
+    margin-top: -60px;
   }
 
   @media (min-width: $desktop-width) {
@@ -16,14 +21,15 @@
     grid-template-columns: 1fr 1fr;
     grid-template-rows: repeat(3, auto);
     align-items: baseline;
-    gap: 0 100px;
-    padding: 100px 130px 138px 130px;
+    gap: 0 65px;
+    padding: 221px 130px 101px 130px;
+    background-position: top 148px right 59px;
   }
 }
 
 .directions__list {
   grid-template-columns: 1fr;
-  padding-bottom: 25px;
+  padding-bottom: 17px;
 
   @media (min-width: $tablet-width) {
     margin-bottom: 21px;
@@ -37,12 +43,13 @@
 .directions__item {
   display: grid;
   grid-template-columns: minmax(min-content, 1fr);
-  grid-template-rows: auto 15px auto;
-  margin-bottom: 10px;
+  grid-template-rows: auto 11px auto;
+  margin-bottom: 7px;
 
   @media (min-width: $tablet-width) {
     grid-template-columns: 1fr auto;
     grid-template-rows: 1fr;
+    margin-bottom: 10px;
   }
 }
 
@@ -54,13 +61,17 @@
   grid-row: 2 / -1;
   justify-content: space-between;
   align-items: center;
-  padding: 26px 24px 24px 24px;
+  padding: 26px 24px 22px 24px;
   border-radius: 10px;
   background-color: $white;
 
   @media (min-width: $tablet-width) {
     border-radius: 20px 0 0 20px;
     grid-row: 1;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 19px 24px 22px 30px;
   }
 }
 
@@ -70,21 +81,35 @@
   line-height: 21px;
   margin: 0;
   color: $black;
+
+  @media (min-width: $desktop-width) {
+    font-size: 24px;
+    line-height: 24px;
+  }
 }
 
 .directions__info {
   color: $special-grey;
+  padding: 0 50px 0 25px;
+  margin-bottom: 60px;
 
   @media (min-width: $tablet-width) {
     font-size: 28px;
     line-height: 33px;
-    margin-bottom: 104px;
-    padding-right: 270px;
+    margin-bottom: 98px;
+    padding: 25px 270px 0 0;
   }
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $desktop-width) {
     padding: 0;
     margin: 0;
+  }
+}
+
+.directions__info--index {
+  @media (min-width: $desktop-width) {
+    padding: 0 109px;
+    margin-top: -7px;
   }
 }
 
@@ -93,6 +118,12 @@
   margin: 0;
   color: $special-grey-opacity;
   flex-basis: 100%;
+
+  @media (min-width: $tablet-width) {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 20px;
+  }
 }
 
 .directions__counter {
@@ -100,7 +131,12 @@
 
   @media (min-width: $tablet-width) {
     flex-basis: 100%;
+    order: 3;
   }
+
+  // @media (min-width: $desktop-width) {
+  //   order: 3;
+  // }
 }
 
 .directions__flag {
@@ -110,22 +146,39 @@
 
   @media (min-width: $tablet-width) {
     left: initial;
-    right: -20px;
-    top: 50%;
+    right: -36px;
+    top: 32%;
     transform: translateY(-50%);
+  }
+
+  @media (min-width: $desktop-width) {
+    right: -34px;
+    top: 36%;
   }
 }
 
 .directions__image-container--thailand {
   background: url("../img/thailand-mobile.png");
+
+  @media (min-width: $tablet-width) {
+    background: url("../img/thailand-tablet.png");
+  }
 }
 
 .directions__image-container--french {
   background: url("../img/france-mobile.png");
+
+  @media (min-width: $tablet-width) {
+    background: url("../img/france-tablet.png");
+  }
 }
 
 .directions__image-container--czech {
   background: url("../img/czech-mobile.png");
+
+  @media (min-width: $tablet-width) {
+    background: url("../img/czech-tablet.png");
+  }
 }
 
 .directions__image-container {
@@ -142,5 +195,20 @@
     padding: 140px 184px 0 0;
     background-size: cover;
     background-position: center;
+  }
+}
+
+.directions__link {
+  @media (min-width: $tablet-width) {
+    font-size: 24px;
+    line-height: 24px;
+    padding: 30px 21px 28px 23px;
+    border-radius: 20px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 275px;
+    margin-left: 110px;
+    align-self: center;
   }
 }
