--- a/source/sass/page-footer.scss
+++ b/source/sass/page-footer.scss
@@ -1,19 +1,26 @@
 .page-footer {
+  position: relative;
+  z-index: 2;
   background-color: $white;
   padding: 37px 25px 0 25px;
-  border-radius: 26px 26px 0 0;
+  border-radius: 31px 31px 0 0;
   color: $black;
   text-align: center;
+  margin-top: -140px;
 
   @media (min-width: $tablet-width) {
     @include flex;
 
     justify-content: space-between;
-    padding: 46px 40px 32px 40px;
+    padding: 0 40px;
+    margin-top: -77px;
+    border-radius: 61px 61px 0 0;
   }
 
   @media (min-width: $desktop-width) {
-    padding: 47px 60px 43px 60px;
+    padding: 12px 60px 0 60px;
+    margin-top: -73px;
+    border-radius: 57px 57px 0 0;
   }
 }
 
@@ -22,6 +29,9 @@
     @include flex;
     justify-content: space-between;
     align-items: center;
+  }
+
+  @media (min-width: $desktop-width) {
     flex-basis: 50%;
   }
 }
@@ -32,11 +42,11 @@
   justify-content: space-between;
   align-items: center;
   flex-basis: 50%;
-  padding: 13px 0;
   border-top: 1px solid rgba($black, 0.05);
 
   @media (min-width: $tablet-width) {
     justify-content: flex-end;
+    flex-basis: unset;
     border: none;
   }
 
@@ -47,6 +57,8 @@
 
 .page-footer__text {
   @media (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 20px;
     margin-right: 29px;
   }
 }
