--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,8 +1,8 @@
 @import "fonts.scss";
 @import "variables.scss";
 @import "mixins.scss";
-@import "page-body.scss";
 @import "global.scss";
+@import "page-body.scss";
 @import "page-header.scss";
 @import "menu.scss";
 @import "main-nav.scss";
@@ -40,3 +40,4 @@
 @import "filtered.scss";
 @import "flag-list.scss";
 @import "countries-filter.scss";
+@import "map.scss";
