--- a/source/sass/about.scss
+++ b/source/sass/about.scss
@@ -1,17 +1,20 @@
 .about {
+  position: relative;
+  z-index: 7;
   background-image: url("../img/about-mobile.png");
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: top 9px right 9px;
   background-color: $special-midnight;
-  padding: 33px 50px 82px 50px;
-  border-radius: 0 0 26px 26px;
+  padding: 29px 50px 69px 50px;
+  border-radius: 0 0 31px 31px;
   margin-top: -1px;
 
   @media (min-width: $tablet-width) {
     background-image: url("../img/about-bg-tablet.png");
     background-repeat: no-repeat;
-    background-position: top 20px right 8px;
-    padding: 33px 74px 82px 74px;
+    background-position: top 73px right 8px;
+    padding: 78px 74px 90px 74px;
+    border-radius: 0 0 61px 61px;
   }
 
   @media (min-width: $desktop-width) {
@@ -20,23 +23,32 @@
       url("../img/about-bg-rect-desktop.png");
     background-repeat: no-repeat, no-repeat;
     background-position:
-      top 125px right,
+      top 87px right 60px,
       top 70px left 60px;
-    padding: 118px 26% 225px 130px;
+    padding: 133px 48% 165px 130px;
   }
 }
 
 .about__title {
   padding: 0;
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 58px;
+  }
 }
 
 .about__text {
   line-height: 22px;
+  font-weight: 300;
 
   @media (min-width: $tablet-width) {
     font-size: 28px;
     line-height: 33px;
     padding-right: 320px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-right: 0;
   }
 }
 
@@ -46,11 +58,12 @@
   @media (min-width: $tablet-width) {
     font-size: 21px;
     line-height: 25px;
-    margin-bottom: 90px;
+    margin-bottom: 59px;
   }
 
   @media (min-width: $desktop-width) {
-    margin-bottom: 125px;
+    padding: 10px 150px 0 0;
+    margin-bottom: 86px;
   }
 }
 
@@ -60,6 +73,11 @@
   }
 
   @media (min-width: $tablet-width) {
-    display: initial;
+    display: flex;
+    width: 44%;
+    font-size: 24px;
+    line-height: 24px;
+    padding: 28px 27px 25px 33px;
+    border-radius: 20px;
   }
 }
