--- a/source/sass/authorization.scss
+++ b/source/sass/authorization.scss
@@ -1,11 +1,17 @@
 .authorization {
+  display: none;
   text-align: center;
   margin-bottom: 50px;
 
   @media (min-width: $tablet-width) {
+    display: block;
     position: absolute;
     top: 0;
     right: 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    top: 4px;
   }
 }
 
@@ -21,10 +27,19 @@
 
   @media (min-width: $tablet-width) {
     line-height: 20px;
-    padding: 11px 40px 9px 39px;
-    font-weight: normal;
+    // padding: 11px 40px 9px 39px;
+    padding: 15px 26px 15px 25px;
+    font-weight: bold;
     font-size: 20px;
     text-align: center;
     letter-spacing: 0.03em;
+  }
+
+  @media (min-width: $desktop-width) {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 20px;
+    padding: 15px 25px 14px 26px;
   }
 }
