--- a/source/sass/business-rates.scss
+++ b/source/sass/business-rates.scss
@@ -56,3 +56,12 @@
     padding: 41px 80px;
   }
 }
+
+.business-rates__icon {
+  display: none;
+
+  @media (min-width: $tablet-width) {
+    display: block;
+    margin-right: 20px;
+  }
+}
