--- a/source/sass/companions.scss
+++ b/source/sass/companions.scss
@@ -1,15 +1,20 @@
 .companions {
+  position: relative;
+  margin-top: -30px;
+  z-index: 5;
   background-image: url("../img/companions-bg.png");
   background-repeat: no-repeat;
   background-color: $basic-blue;
-  padding: 102px 25px 20px 25px;
-  border-radius: 0 0 25px 25px;
+  padding: 78px 25px 30px 25px;
+  border-radius: 0 0 31px 31px;
 
   @media (min-width: $tablet-width) {
-    padding: 102px 76px 87px 76px;
+    padding: 164px 74px 87px 74px;
     background-image: url("../img/companions-bg-tablet.png");
     background-repeat: no-repeat;
-    background-position: top 50px right 74px;
+    background-position: top 129px right 74px;
+    margin-top: -60px;
+    border-radius: 0 0 61px 61px;
   }
 
   @media (min-width: $desktop-width) {
@@ -18,17 +23,17 @@
     align-items: center;
     justify-items: center;
     grid-template-rows: repeat(4, auto);
-    gap: 0 50px;
-    padding: 102px 60px 87px 130px;
+    padding: 194px 60px 54px 119px;
   }
 }
 
 .companions__text {
   padding: 0 25px;
   font-weight: 300;
+  margin-bottom: 21px;
 
   @media (min-width: $tablet-width) {
-    padding: 0 140px 0 0;
+    padding: 17px 140px 0 0;
     font-size: 28px;
     line-height: 34px;
   }
@@ -36,22 +41,32 @@
   @media (min-width: $desktop-width) {
     align-self: start;
     margin: 0;
+    padding: 49px 140px 0 10px;
   }
 }
 
 .companions__text--strong {
+  margin-bottom: 54px;
+
   @media (min-width: $tablet-width) {
     font-size: 21px;
     line-height: 24px;
+    margin-bottom: 60px;
   }
 
   @media (min-width: $desktop-width) {
     justify-self: flex-start;
+    padding: 40px 0 0 10px;
+    grid-row: 3;
+    grid-column: 1;
+    margin: 0 0 165px 0;
   }
 }
 
 
 .companions__list {
+  margin-bottom: 20px;
+
   @media (min-width: $tablet-width) {
     @include flex;
 
@@ -59,6 +74,7 @@
   }
 
   @media (min-width: $desktop-width) {
+    width: 100%;
     grid-column: 2;
     grid-row: 1 / -1;
   }
@@ -66,12 +82,23 @@
 
 .companions__item {
   @media (min-width: $tablet-width) {
-    margin-right: 50px;
+    margin-right: 20px;
   }
 
   &:last-of-type {
     @media (min-width: $tablet-width) {
       margin-right: 0;
     }
+  }
+}
+
+.companions__link {
+  @media (min-width: $desktop-width) {
+    width: 280px;
+    justify-self: baseline;
+    grid-row: 3;
+    grid-column: 1;
+    align-self: end;
+    margin-left: 10px;
   }
 }
