--- a/source/sass/contact-list.scss
+++ b/source/sass/contact-list.scss
@@ -2,8 +2,7 @@
   @include flex;
   @include flex-center;
   color: $special-midnight;
-
-  margin-bottom: 40px;
+  text-transform: uppercase;
 
   @media (min-width: $tablet-width) {
     font-size: 28px;
@@ -12,8 +11,7 @@
 
   @media (min-width: $desktop-width) {
     align-items: baseline;
-    width: 100px;
-    padding: 0;
+    padding: 5px 0 0 0;
     margin: 0;
   }
 }
@@ -21,16 +19,18 @@
 .contact-list--interested-section {
   @media (min-width: $desktop-width) {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    width: 868px;
+    margin: auto;
   }
 }
 
 .contact-list__item {
   flex-basis: 100%;
-  padding-left: 25px;
 
   @media (min-width: $tablet-width) {
     padding-left: 0;
+    margin-bottom: 23px;
   }
 
   @media (min-width: $desktop-width) {
@@ -38,6 +38,7 @@
     @include flex-center;
     flex-basis: 50%;
     padding: 0;
+    margin: 0;
   }
 }
 
@@ -67,4 +68,22 @@
     height: 50px;
     margin: 0;
   }
+}
+
+.contact-list__item--interested-section {
+  @media (min-width: $desktop-width) {
+    flex-basis: auto;
+  }
+}
+
+.contact-list__image--interested-section {
+  @media (min-width: $desktop-width) {
+    margin-right: 31px;
+    width: 90px;
+    height: 90px;
+  }
+}
+
+.contact-list__item--index-body {
+  flex-basis: auto;
 }
