--- a/source/sass/interested.scss
+++ b/source/sass/interested.scss
@@ -1,15 +1,20 @@
 .interested {
+  position: relative;
+  margin-top: -30px;
+  z-index: 3;
   background-color: $special-midnight;
   text-align: center;
-  border-radius: 20px;
-  padding: 72px 25px 45px 25px;
+  border-radius: 31px;
+  padding: 81px 25px 26px 25px;
 
   @media (min-width: $tablet-width) {
-    padding: 72px 75px 45px 75px;
+    padding: 101px 75px 45px 75px;
+    border-radius: 0 0 61px 61px;
+    margin-top: -61px;
   }
 
   @media (min-width: $desktop-width) {
-    padding: 109px 130px 103px 130px;
+    padding: 133px 133px 101px 133px;
   }
 }
 
@@ -19,14 +24,30 @@
   @media (min-width: $tablet-width) {
     font-size: 45px;
     line-height: 45px;
+    margin-bottom: 60px;
   }
 }
 
 .interested__text {
+  margin-bottom: 20px;
+
   @media (min-width: $tablet-width) {
     font-size: 28px;
     line-height: 32px;
-    margin-bottom: 65px;
+    margin-bottom: 60px;
+    font-weight: 300;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 55px;
+  }
+}
+
+.interested__text--questions {
+  @media (min-width: $desktop-width) {
+    letter-spacing: 0.3px;
+    padding-top: 10px;
+    margin-bottom: 36px;
   }
 }
 
