--- a/source/sass/main-nav.scss
+++ b/source/sass/main-nav.scss
@@ -2,6 +2,10 @@
   @media (min-width: $tablet-width) {
     padding-bottom: 0;
   }
+
+  @media (min-width: $desktop-width) {
+    padding: 20px 0 0 17px;
+  }
 }
 
 .main-nav__list {
