--- a/source/sass/page-body.scss
+++ b/source/sass/page-body.scss
@@ -71,6 +71,55 @@
   }
 }
 
+.page-body__section-title--directions {
+  @media (min-width: $desktop-width) {
+    padding: 5px 0 0 109px;
+  }
+}
+
+.page-body__section-title--companions {
+  @media (min-width: $desktop-width) {
+    padding-left: 10px;
+  }
+}
+
 .page-body__title--index {
   border-radius: none;
+  padding: 43px 25px 10px 25px;
+  margin-bottom: 254px;
+
+  @media (min-width: $tablet-width) {
+    padding-top: 30px;
+    margin-bottom: 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 29px 25px 10px 67px;
+    margin-bottom: 91px;
+  }
+}
+
+.page-body__contacts {
+  @include flex;
+
+  align-items: flex-start;
+  justify-content: center;
+  transform: translateY(-38%);
+  width: 100%;
+
+  @media (min-width: $tablet-width) {
+    display: none;
+  }
+}
+
+.page-body__authorization {
+  padding: 10px 40px;
+  border-radius: 20px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 17px;
+  line-height: 20px;
+  text-transform: uppercase;
+  color: $basic-blue;
+  background-color: $basic-yellow;
 }
