--- a/source/sass/register-form.scss
+++ b/source/sass/register-form.scss
@@ -3,9 +3,15 @@
   font-family: $main-font;
   background-color: $white;
   border-radius: 20px;
+  margin-top: 28px;
+  margin-bottom: 30px;
 
   @media (min-width: $tablet-width) {
     margin-bottom: 60px;
+  }
+
+  @media (min-width: $tablet-width) {
+    border-radius: 20px;
   }
 }
 
@@ -13,15 +19,19 @@
   font-family: $main-font;
   flex-grow: 2;
   border: none;
-  border-radius: 20px;
+  border-radius: 10px;
   font-weight: bold;
   font-size: 18px;
   line-height: 18px;
   color: rgba($special-grey, 0.3);
-  padding: 22px 25px;
+  padding: 20px 20px;
 
   @media (min-width: $tablet-width) {
     padding: 28px 36px;
+  }
+
+  @media (min-width: $desktop-width) {
+    border-radius: 20px;
   }
 }
 
