--- a/source/sass/register.scss
+++ b/source/sass/register.scss
@@ -1,31 +1,52 @@
 .register {
   position: relative;
+  margin-top: -30px;
+  z-index: 4;
   background-color: $basic-blue-light;
-  padding: 71px 25px 38px 50px;
+  padding: 61px 25px 38px 50px;
   color: $basic-blue;
-  border-radius: 25px;
+  border-radius: 31px;
 
   @media (min-width: $tablet-width) {
-    padding: 74px 40px 29px 40px;
+    padding: 99px 40px 63px 40px;
+    border-radius: 0 0 61px 61px;
+    margin-top: -61px;
   }
 
   @media (min-width: $desktop-width) {
-    padding: 70px 130px 165px 130px;
+    padding: 132px 130px 165px 130px;
   }
 }
 
 .register__image {
   position: absolute;
-  right: 0;
+  right: 25px;
+  top: 66px;
 
   @media (min-width: $tablet-width) {
-    bottom: 50px;
+    top: unset;
+    bottom: 46px;
     right: 85px;
+    z-index: 2;
   }
 
   @media (min-width: $desktop-width) {
     bottom: initial;
-    top: 242px;
-    right: 85px;
+    top: 348px;
+    right: 133px;
+  }
+}
+
+.register-form__button-text {
+  display: none;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 24px;
+}
+
+.register-form__button-text--show-on-desktop {
+  @media (min-width: $desktop-width) {
+    display: block;
   }
 }
