--- a/source/sass/social-list.scss
+++ b/source/sass/social-list.scss
@@ -21,7 +21,7 @@
 }
 
 .social-list--footer {
-  padding: 37px;
+  padding: 33px;
 
   @media (min-width: $tablet-width) {
     padding: 37px 0;
@@ -42,4 +42,9 @@
   height: 45px;
   border-radius: 50%;
   background-color: $basic-yellow;
+
+  @media (min-width: $tablet-width) {
+    width: 62px;
+    height: 62px;
+  }
 }
