--- a/source/sass/user-score.scss
+++ b/source/sass/user-score.scss
@@ -8,7 +8,7 @@
   width: 60px;
   height: 60px;
   margin-bottom: 18px;
-  border: 3px solid $special-orange;
+  // border: 3px solid $special-orange;
   border-radius: 50%;
   font-weight: normal;
   font-size: 14px;
@@ -61,4 +61,18 @@
   @media (min-width: $desktop-width) {
     border-bottom: 1px solid $white;
   }
+}
+
+.user-score__progress-ring {
+  position: absolute;
+  right: -30px;
+  top: -30px;
+}
+
+.user-score__progress-ring__circle {
+  transition: 0.35s stroke-dashoffset;
+  transform: rotate(-90deg);
+  transform-origin: 50% 50%;
+  stroke: $special-orange;
+  stroke-width: 3px;
 }
