Исправил ошибки в БЭМ и поправил Pixel Perfect

--- a/source/sass/authorization.scss
+++ b/source/sass/authorization.scss
@@ -25,9 +25,16 @@
   padding: 12px 81px 8px 78px;
   cursor: pointer;
 
+  &:hover {
+    background-color: $special-orange-light;
+  }
+
+  &:active {
+    color: $basic-blue-opacity;
+  }
+
   @media (min-width: $tablet-width) {
     line-height: 20px;
-    // padding: 11px 40px 9px 39px;
     padding: 15px 26px 15px 25px;
     font-weight: bold;
     font-size: 20px;
