--- a/source/sass/about.scss
+++ b/source/sass/about.scss
@@ -3,17 +3,17 @@
   z-index: 7;
   background-image: url("../img/about-mobile.png");
   background-repeat: no-repeat;
-  background-position: top 9px right 9px;
+  background-position: top 18px right 8px;
   background-color: $special-midnight;
-  padding: 29px 50px 69px 50px;
-  border-radius: 0 0 31px 31px;
+  padding: 29px 50px 65px 50px;
+  border-radius: 0 0 30px 30px;
   margin-top: -1px;
 
   @media (min-width: $tablet-width) {
     background-image: url("../img/about-bg-tablet.png");
     background-repeat: no-repeat;
     background-position: top 73px right 8px;
-    padding: 78px 74px 90px 74px;
+    padding: 78px 74px 89px 74px;
     border-radius: 0 0 61px 61px;
   }
 
@@ -54,11 +54,12 @@
 
 .about__text--strong {
   font-weight: bold;
+  padding-top: 5px;
 
   @media (min-width: $tablet-width) {
     font-size: 21px;
     line-height: 25px;
-    margin-bottom: 59px;
+    margin-bottom: 52px;
   }
 
   @media (min-width: $desktop-width) {
@@ -77,7 +78,7 @@
     width: 44%;
     font-size: 24px;
     line-height: 24px;
-    padding: 28px 27px 25px 33px;
+    padding: 27px 30px 28px 33px;
     border-radius: 20px;
   }
 }
