--- a/source/sass/companions.scss
+++ b/source/sass/companions.scss
@@ -1,12 +1,13 @@
 .companions {
   position: relative;
-  margin-top: -30px;
   z-index: 5;
+  margin-top: -30px;
+  padding: 78px 25px 30px 25px;
+  border-radius: 0 0 30px 30px;
+  background-color: $basic-blue;
   background-image: url("../img/companions-bg.png");
   background-repeat: no-repeat;
-  background-color: $basic-blue;
-  padding: 78px 25px 30px 25px;
-  border-radius: 0 0 31px 31px;
+  background-position: top 64px left -2px;
 
   @media (min-width: $tablet-width) {
     padding: 164px 74px 87px 74px;
@@ -14,7 +15,7 @@
     background-repeat: no-repeat;
     background-position: top 129px right 74px;
     margin-top: -60px;
-    border-radius: 0 0 61px 61px;
+    border-radius: 0 0 60px 60px;
   }
 
   @media (min-width: $desktop-width) {
