--- a/source/sass/quote.scss
+++ b/source/sass/quote.scss
@@ -1,10 +1,12 @@
 .quote {
   margin: 0;
-  padding: 3px 100px 29px 50px;
+  padding: 48px 100px 29px 50px;
   font-weight: 300;
+  background-color: $basic-blue;
 
   @media (min-width: $tablet-width) {
     padding: 76px 100px 211px 72px;
+    background-color: transparent;
   }
 
   @media (min-width: $desktop-width) {
