--- a/source/sass/register-form.scss
+++ b/source/sass/register-form.scss
@@ -24,10 +24,11 @@
   font-size: 18px;
   line-height: 18px;
   color: rgba($special-grey, 0.3);
-  padding: 20px 20px;
+  padding: 20px 20px 19px 20px;
 
   @media (min-width: $tablet-width) {
     padding: 28px 36px;
+    border-radius: 20px;
   }
 
   @media (min-width: $desktop-width) {
