--- a/source/sass/register.scss
+++ b/source/sass/register.scss
@@ -3,9 +3,9 @@
   margin-top: -30px;
   z-index: 4;
   background-color: $basic-blue-light;
-  padding: 61px 25px 38px 50px;
+  padding: 64px 25px 38px 50px;
   color: $basic-blue;
-  border-radius: 31px;
+  border-radius: 0 0 30px 30px;
 
   @media (min-width: $tablet-width) {
     padding: 99px 40px 63px 40px;
