--- a/source/sass/social-list.scss
+++ b/source/sass/social-list.scss
@@ -24,12 +24,13 @@
   padding: 33px;
 
   @media (min-width: $tablet-width) {
-    padding: 37px 0;
-    transform: translateX(50%);
+    padding: 0;
+    transform: translate(47%, -7%);
   }
 
   @media (min-width: $desktop-width) {
     display: flex;
+    transform: translateX(50%);
   }
 }
 
