--- a/source/sass/user-card.scss
+++ b/source/sass/user-card.scss
@@ -9,7 +9,8 @@
   text-align: center;
 
   @media (min-width: $tablet-width) {
-    margin-bottom: 61px;
+    max-width: 285px;
+    margin-bottom: 60px;
     border-radius: 20px;
   }
 }
@@ -20,13 +21,10 @@
 }
 
 .user-card__container {
-  @include flex;
-  @include flex-center;
-
-  @media (min-width: $tablet-width) {
-    // flex-direction: column;
-    // padding-top: 20px;
-  }
+  display: grid;
+  grid-template-columns: 6px auto;
+  gap: 10px;
+  align-items: center;
 }
 
 .user-card__likes {
@@ -48,14 +46,18 @@
 
 .user-card__content {
   position: relative;
-  padding: 0 10px 16px 10px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 0 10px 10px 10px;
 
-  // @media (min-width: $mobile-width) and (max-width: 1439px) {
-  //   @include flex;
-  //   @include flex-center;
+  @media (min-width: $tablet-width) {
+    padding: 1px 10px 17px 10px;
+  }
 
-  //   justify-content: center;
-  // }
+  @media (min-width: $desktop-width) {
+    padding: 1px 10px 15px 10px;
+  }
 }
 
 .user-card__user-name {
@@ -63,10 +65,13 @@
   font-size: 21px;
   line-height: 21px;
   color: $basic-blue-dark;
+  padding: 1px 16px 0 0;
+  margin-bottom: 16px;
 
   @media (min-width: $tablet-width) {
     font-size: 24px;
     line-height: 22px;
+    margin-bottom: 24px;
   }
 }
 
@@ -75,10 +80,15 @@
   width: 6px;
   height: 6px;
   border-radius: 50%;
-  // align-self: flex-start;
+  margin-right: 10px;
 
   @media (min-width: $tablet-width) {
-    grid-area: user-status;
+    width: 8px;
+    height: 8px;
+  }
+
+  @media (min-width: $desktop-width) {
+    // grid-area: user-status;
   }
 }
 
