--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -4,6 +4,7 @@ $main-font: "Bloggersans", "Tahoma", sans-serif;
 $black: #000000;
 $white: #ffffff;
 $basic-blue: #161c35;
+$basic-blue-opacity: rgba($basic-blue, 0.3);
 $basic-blue-dark: #1d2e5b;
 $basic-blue-light: #edeff6;
 $basic-yellow: #ffd74b;
@@ -12,6 +13,7 @@ $special-blue-lighter: #d4d9eb;
 $special-yellow-dark: #ffa530;
 $special-orange: #ff8d30;
 $special-orange-light: #ffbd30;
+$special-orange-hover: #f26926;
 $special-grey: #444444;
 $special-pink: #f47e7e;
 $special-midnight:#192144;
