--- a/source/sass/contact-list.scss
+++ b/source/sass/contact-list.scss
@@ -30,7 +30,6 @@
 
   @media (min-width: $tablet-width) {
     padding-left: 0;
-    margin-bottom: 23px;
   }
 
   @media (min-width: $desktop-width) {
@@ -117,5 +116,11 @@
 
   &:active {
     opacity: 0.3;
+  }
+}
+
+.contact-list--menu-open {
+  @media (min-width: $mobile-width) and (max-width: 1439px) {
+    margin-bottom: 113px;
   }
 }
