--- a/source/sass/menu.scss
+++ b/source/sass/menu.scss
@@ -7,10 +7,6 @@
   @media (min-width: $mobile-width) and (max-width: 1439px) {
     color: $special-midnight;
   }
-
-  @media (min-width: $desktop-width) {
-    // background-color: $basic-blue;
-  }
 }
 
 .menu__header {
@@ -32,7 +28,6 @@
 
 .menu__body {
   display: none;
-  // background-color: white;
   flex-basis: 100%;
   padding-top: 76px;
 
@@ -47,10 +42,14 @@
     flex-basis: 61%;
     justify-content: space-between;
     padding: 0;
-    // background-color: $basic-blue;
   }
 }
 
 .menu__body--menu-open {
   display: block;
+  padding-top: 69px;
+
+  @media (min-width: $tablet-width) {
+    padding-top: 92px;
+  }
 }
