--- a/source/sass/page-header.scss
+++ b/source/sass/page-header.scss
@@ -22,6 +22,7 @@
 .page-header--menu-open {
   background-color: $white;
   position: absolute;
+  padding-bottom: 0;
   top: 0;
   left: 0;
   right: 0;
