--- a/source/sass/user-card.scss
+++ b/source/sass/user-card.scss
@@ -25,6 +25,14 @@
   grid-template-columns: 6px auto;
   gap: 10px;
   align-items: center;
+
+  &:hover {
+    opacity: 0.7;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 }
 
 .user-card__likes {
